--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,15 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         WWW-UsePerl-Journal-Thread
-version:      0.04
+version:      0.08
 version_from: lib/WWW/UsePerl/Journal/Thread.pm
 installdirs:  site
 requires:
     HTTP::Request::Common:         0
     LWP::UserAgent:                0
+    Test::More:                    0
     Time::Piece:                   0
-    WWW::UsePerl::Journal:         0.11
+    WWW::UsePerl::Journal:         0.12
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21
+generated_by: ExtUtils::MakeMaker version 6.25
